updated feture page cards to have light and dark bg
*Added paginator
*Updated sass variables
*Added infinite scroll js

--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -8,6 +8,7 @@
     --clr-bg-3:             #{$background-3--lite};
     --clr-bg-4:             #{$background-4--lite};
     --clr-bg-5:             #{$background-5--lite};
+    --clr-bg-card:          #{$background-card--lite};
     --clr-bg-bd-decor:      #{$background-border-decor--lite};
     --clr-bg-bd-decor-int:  #{$background-border-int--lite};
     --clr-typo:             #{$color-typo--lite};
@@ -22,7 +23,8 @@
     --clr-bg-2:                     #{$background-2};
     --clr-bg-3:                     #{$background-3};
     --clr-bg-4:                     #{$background-4}; 
-    --clr-bg-5:                     #{$background-5} ; 
+    --clr-bg-5:                     #{$background-5} ;
+    --clr-bg-card:                  #{$background-card}; 
     --clr-bg-bd-decor:              #{$color-typo-faint};
     --clr-bg-bd-decor-int:          #{$background-border-interactive};
     --clr-typo:                     #{$color-typo};
