--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -126,6 +126,10 @@ strong{
 }
 .inner-site-container{
     @include border( 1px, solid, #{$background-border-decor-string}, -top );
+
+    @media #{$lg-scn--dn}{
+        border-top: none;
+    }
 }
 .module-row{
     flex-wrap: unset;
@@ -377,7 +381,7 @@ svg {
     @media #{$lg-scn--up}{
         position: relative;
         z-index: 100;
-        margin-bottom: 34rem;
+        margin-bottom: 34.5rem;
         box-shadow: 0 0 20px rgba(0,0,0,0.25);
         background-color: $background-1--lite;
         @include bg-color(#{$background-1-string});
@@ -409,15 +413,35 @@ svg {
 } 
 .page-title {
     font-family: "Alegreya";
-    font-size: 25px !important;
-    margin: 30px 0;
+    font-size: 20px;
+    margin: 0 0 30px 0;
     border-bottom: 1px solid var(--clr-bg-bd-decor);
 
+    & h1{
+        font-size: 25px;
+    }
+    & p{
+        font-size: 12px;
+    }
     @media #{$md-scn--up}{
+        margin: 30px 0;
         font-size: 30px !important;
+        & h1{
+            font-size: 35px;
+        }
+        & p{
+            font-size: 16px;
+        }
     }
     @media #{$lg-scn--up}{
+        margin: 30px 0;
         font-size: 50px !important;
+        & h1{
+            font-size: 50px;
+        }
+        & p{
+            font-size: 20px;
+        }
     }
 }
 
