--- a/_sass/side-menu.scss
+++ b/_sass/side-menu.scss
@@ -1,15 +1,15 @@
 .side-menu{
     background: gray;
     position: fixed;
-    width: 60vw;
+    width: 100vw;
     z-index: 9999;
     @include bg-color(#{$background-1-string});
-    height: calc(100vh - 63px);
-    top: 63px;
+    height: calc(100vh - 50px);
+    top: 50px;
     bottom: 0;
-    border-top: 1px solid;
-    @include border(1px, solid, #{$background-border-decor-string}, -top);
-    @include border(1px, solid, #{$background-border-decor-string}, -right);
+    // border-top: 1px solid;
+    // @include border(1px, solid, #{$background-border-decor-string}, -top);
+    // @include border(1px, solid, #{$background-border-decor-string}, -right);
     padding: 1em;
     overflow-y: scroll;
     @media (max-width: 1038px) and (min-width: 767px){
@@ -22,7 +22,7 @@
         padding-top: 3em;
         overflow-y: scroll;
     }
-
+    // @media (max-width: 767px)
 //search bar styles
     & .search-bar form .border-style{
         position: relative;
@@ -220,7 +220,7 @@
 
 .slide-down--nav .slide-down--{
     @media #{$lg-scn} {
-        height: calc(100vh - 70px);
-        top: 70px;
+        height: calc(100vh - 50px);
+        top: 50px;
     }
 }
