--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -27,4 +27,5 @@ sitemap: false
 @import 'pages/about';
 @import 'pages/single-gally';
 @import 'pages/video-gallery';
+@import 'pages/search';
 @import 'modal';
