--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,16 +1,49 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
-<meta content="text/html; charset=UTF-8" http-equiv="Content-Type">
-<meta http-equiv=X-UA-Compatible content="IE=edge,chrome=1">
 
+
+<!-- Jekyll seo -->
+{% if site.plugins contains 'jekyll-seo-tag' or site.gems contains 'jekyll-seo-tag' %}
+{% comment %}
+  Add metadata for search engines and social networks if jekyll-seo-tag plugin is enabled
+{% endcomment %}
+{% include head-seo.html %}
+{% endif %}
+
+<!-- Page-title  -->
+<title>{% if page.title %}{{ page.title }} &#8211;&#8211; {% endif %}{{ site.title }}</title>
+<!-- Page-description -->
+<meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}"/>
+<!-- Open graph -->
+{% include open-graph.html  %}
+<!-- Date -->
+{% if page.date %}
+    <meta content="{{ page.date | date_to_xmlschema }}" property="article:published_time">
+{% endif %}
+
+<!-- favicons -->
+<link rel="shortcut icon" type="image/x-icon" sizes="32x32" href="{{site.baseurl}}/assets/images/favicons/logo.ico" />
+<link rel="apple-touch-icon" sizes="180x180" href="/assets/images/favicons/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/assets/images/favicons/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/assets/images/favicons/favicon-16x16.png">
+<link rel="manifest" href="/assets/images/favicons/manifest.json">
+<link rel="mask-icon" href="/assets/images/favicons/safari-pinned-tab.svg" color="#1572b6">
+<link rel="shortcut icon" href="/assets/images/favicons/favicon.ico">
+<meta name="msapplication-config" content="/assets/images/favicons/browserconfig.xml">
+<meta name="theme-color" content="#ffffff">
+
+<!-- site verifications -->
+{% if site.owner.google.verify %}<meta name="google-site-verification" content="{{ site.owner.google.verify }}">{% endif %}
+{% if site.owner.bing-verify %}<meta name="msvalidate.01" content="{{ site.owner.bing-verify }}">{% endif %}
+
+<!-- Feed -->
+{%- if site.plugins contains 'jekyll-feed' or site.gems contains 'jekyll-feed' -%}
+{%- comment -%}
+  Add Atom feed link if jekyll-feed plugin is enabled
+    <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}"/>
+{%- endcomment -%}
+{%- endif -%}
+<link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}"/>
 <!-- CSS LINK -->
-<link rel="stylesheet" href="{{ site.baseurl }}/assets/css/main.css">
-<link rel="stylesheet" href="{{ site.baseurl }}/assets/css/slick.css">
-<link rel="stylesheet" href="{{ site.baseurl }}/assets/css/flickity.min.css">
-<link rel="stylesheet" href="{{ site.baseurl }}/assets/css/Vendor/flickity.min.css">
-<link rel="stylesheet" href="{{ site.baseurl }}/assets/css/Vendor/fullscreen.css">
-<link rel="stylesheet" href="{{ site.baseurl }}/assets/css/Vendor/slick.css">
-<link rel="stylesheet" href="{{ site.baseurl }}/assets/css/Vendor/slick-theme.css">
-<link rel="stylesheet" href="{{ site.baseurl }}/assets/css/Vendor/font-awesome.min.css">
-<link rel="stylesheet" href="{{ site.baseurl }}/assets/css/Vendor/venobox.min.css">
+{% include css.html %}
