--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -21,6 +21,7 @@ sitemap: false
 @import 'footer';
 @import 'mobile-nav';
 @import 'typography';
+@import 'relatednews';
 @import 'pages/latest';
 @import 'pages/post';
 @import 'pages/features';
