remedy loadmore button

--- a/_sass/pages/latest.scss
+++ b/_sass/pages/latest.scss
@@ -314,7 +314,7 @@
     //     }
     //   }
     }
-  }
+}
   .loadMore {
     
     position: relative;
@@ -327,7 +327,6 @@
     border: 1px solid green;
     cursor: pointer;
     border-radius: .3em;
-    border-top-left-radius: .9em;
     margin-bottom: 2em;
     font-weight: 600;
     
@@ -345,10 +344,12 @@
         position: absolute;
         left: 0;
         right: 0;
-        background-color: transparent;
-        width: 100%;
+
+        background-color: var(--clr-bg-1);
+        width: 95%;
+        margin: 0 auto;
         content: 'Loading...';
-        color: #bcbcbc;
+        color: $color-accent;
       }
     } 
   }
