--- a/_layouts/latest.html
+++ b/_layouts/latest.html
@@ -8,15 +8,6 @@ paginator: 10
 <html lang="en">
 <head>
     {% include head.html %}
-
-    <!-- <style>
-        .infinite-spinner{
-            opacity: 0;
-        }
-        .infinite-spinner.show{
-            opacity: 1;
-        }
-    </style> -->
 </head>
 <body>
    <div id="main">
@@ -42,10 +33,10 @@ paginator: 10
                                 {% assign currentPage = 1 %}
                             {% endif %}
 
-                            <div id="article-container" class="article-inner-container" data-page="{{ currentPage }}" data-totalPages="{{ paginator.total_pages }}">
-                            {% for latest in site.posts limit:site.paginate offset:offset %}
+                            <div id="article-container" class="article-inner-container" data-page="{{ currentPage }}" data-totalPages="{{ paginator.total_pages }}" data-pageurl="{{ page.url | remove: "/index.html"}}">
+                            {% for latest in paginator.posts %}
                             
-                                <article class="article-details context-list article-summary">
+                                <article id="blog-article" class="article-details context-list article-summary" data-url="{{ latest.url | xml_escape }}">
                                     <div class="sub-article-details context-list">
                                         <a href="{{ site.baseurl }}{{ latest.url }}" class="article-link">
                                             <figure class="article-figure size-medium">
@@ -77,18 +68,8 @@ paginator: 10
                                 </article>
                                 {% endfor %}
                             </div> 
-                                {% assign postCount = site.posts | size %}
-                                {% assign postsCovered = site.paginate | plus:offset %}
-                                {% if postsCovered < postCount %}
-                                  <button class="loadMore">Load more posts</button>
-                                {% endif %}
-
-
-                            <div class="article-inner-container article-inner-container-observe post-list">
-                                {% for post in site.posts limit: 5 %}
-                                
-                                {% endfor %}
-                            </div>
+                            {% include loadmore.html %}
+                
                         </div>
                         <!-- <div class="infinite-spinner"></div> -->
                     </div>
@@ -96,8 +77,7 @@ paginator: 10
             </div>
         </main>
         <!-- <div class="infinite-spinner"></div> -->
-       {% include footer.html %}
-   </div>
+       {% include footer.html %} 
    {% include mobi-footer.html %}
    <script src="{{ site.baseurl }}/assets/js/hamburger.js "></script>
    <script src="{{ site.baseurl }}/assets/js/jquery-3.5.1.min.js "></script>
