--- a/_layouts/latest.html
+++ b/_layouts/latest.html
@@ -1,7 +1,16 @@
 ---
-layout: default
+layout: compress
+title: Latest stories
+paginator: 10
 ---
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    {% include head.html %}
+</head>
+<body>
+   <div id="main">
        <div class="div-wrapper">
         {% include nav.html %}   
        </div>
@@ -60,16 +69,26 @@ layout: default
                                 {% endfor %}
                             </div> 
                             {% include loadmore.html %}
+                
                         </div>
+                        <!-- <div class="infinite-spinner"></div> -->
                     </div>
                 </div>
             </div>
         </main>
+        <!-- <div class="infinite-spinner"></div> -->
        {% include footer.html %} 
-   </div><!-- END #MAIN -->
    {% include mobi-footer.html %}
-
    <script src="{{ site.baseurl }}/assets/js/hamburger.js "></script>
    <script src="{{ site.baseurl }}/assets/js/jquery-3.5.1.min.js "></script>
+   <!-- <script src="{{ site.baseurl }}/assets/js/Vendor/infinite-jekyll.js "></script> -->
    <script src="{{ site.baseurl }}/assets/js/custom-infinite-scroll.js "></script> 
+   <!-- <script src="{{ site.baseurl }}/assets/js/Vendor/InfiniteScroll.js "></script>
+   <script>
+        var postWrapperId = 'article-container';
+        var paginatePath = '/np.io/latest/page';
+        new InfiniteScroll(paginatePath, postWrapperId);
+    </script> -->
+</body>
 
+</html>
