Updated last update

--- a/_layouts/latest.html
+++ b/_layouts/latest.html
@@ -52,7 +52,7 @@ layout: default
                                                 <div class="article-info">
                                                     <div class="author">By {{ latest.author }}</div>
                                                     <div class="cat">
-                                                        <span>{{ latest.category}} / </span>
+                                                        <span>{{ latest.category}}</span>
                                                         <time datetime="{{ latest.date }}" class="date">{{ latest.date | timeago }}</time>
                                                     </div> 
                                                 </div>
