corrected image link-flaws and added lazload to images

--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -10,5 +10,5 @@
 <script src="{{ site.baseurl }}/assets/js/Vendor/slick.min.js"></script>
 <script src="{{ site.baseurl }}/assets/js/Vendor/slick.js"></script>
 <script src="{{ site.baseurl }}/assets/js/Vendor/venobox.min.js"></script>
-
+<script src="{{ site.baseurl }}/assets/js/Vendor/lazysizes.min.js"></script>
 
